# capstone

./: .gitignore  Jenkinsfile  README.md  backup  base_malware.c  main.py  pyproject.toml  requirements.txt
ansible/tasks/: server.yml
ansible/vars/: main.yml
jenkins/: README.md  inventory.ini  main.yml
jenkins/tasks/: agent.yml  server.yml
jenkins/vars/: main.yml
pipeline/: Jenkinsfile
scripts/: main.py  prebuild.sh  pyproject.toml
scripts/pipeline/: callback.py  cli.py  llm.py
scripts/src/: README.md
scripts/src/Evasive/APC-Injector/: APC-Injector.cpp
scripts/src/Evasive/APC-Injector-Monolithic/: APC-Injector-Monolithic.sln
scripts/src/Evasive/DLL-Injector/: DLL-Injector.vcxproj.filters
scripts/src/Evasive/DLL-Injector-Monolithic/: DLL-Injector-Monolithic.cpp  DLL-Injector-Monolithic.vcxproj  DLL-Injector-Monolithic.vcxproj.filters
scripts/src/Evasive/PE-Injector/: PE-Injector.cpp
scripts/src/Evasive/PE-Injector-Monolithic/: PE-Injector-Monolithic.sln
scripts/src/Simple/APC-Injector/: APC-Injector.cpp
scripts/src/Simple/DLL-Injector/: DLL-Injector.cpp
scripts/src/Simple/DLL-Injector-Monolithic/: DLL-Injector-Monolithic.cpp  DLL-Injector-Monolithic.sln
scripts/src/Simple/PE-Injector/: PE-Injector.sln  PE-Injector.vcxproj.filters
scripts/src/Simple/PE-Injector-Monolithic/: PE-Injector-Monolithic.vcxproj
src/: Makefile  generate.sh
src/Evasive/APC-Injector/: APC-Injector.sln  APC-Injector.vcxproj
src/Evasive/APC-Injector-Monolithic/: APC-Injector-Monolithic.cpp  APC-Injector-Monolithic.vcxproj.filters
(+11 files in other folders)
