[project]
name = "pipeline"
version = "0.1.0"
description = "Helper CLI for pipeline tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "openai>=1.64.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
pipeline = "pipeline.cli:cli"


[tool.uv]
package = true
